# mULLER

./: .gitignore  CLAUDE.md  README.md  benchmark.py  benchmark_countable.py  benchmark_output.txt  hie.yaml  mULLER.cabal  pyproject.toml  replot.py
.github/workflows/: ci.yml  release.yml
.ipynb_checkpoints/: haskell_demo-checkpoint.ipynb  simple_test-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
Code/: NeSy.hs  __main__.py  distribution_monad.py  giry_monad.py  identity_monad.py  ltn_semantics.py  nesy.py  powerset_monad.py  probabilistic_semantics.py  testing.ipynb
Haskell/: NeSy.hs  density_giry.hs  haskell_demo.hi  haskell_demo.hs  haskell_demo.ipynb  integration.hs
Text/: ZOTERO.bib  ed.sty  jmlr.cls  mULLER.aux  mULLER.bbl  mULLER.blg  mULLER.fdb_latexmk  mULLER.fls  mULLER.out  mULLER.tex  mULLER.xdv  nesy2025.cls  quiver.sty  references-file.bib
daniel_haskell/: Main.hs  Semantics.hs  Syntax.hs  TestTyped.hs  TypedSemantics.hs  TypedSyntax.hs
daniel_haskell/Interpretations/: Countable.hs  Dice.hs  TrafficLight.hs  Weather.hs
daniel_haskell/Logical/Interpretations/: Boolean.hs  Goedel.hs  Lukasiewicz.hs  Product.hs  Real.hs
daniel_haskell/NeSyFramework/Categories/: DATA.hs  TENS.hs  Utils.hs
daniel_haskell/NeSyFramework/Monads/: Dist.hs  Giry.hs
daniel_haskell/NeSyFramework/TruthSpaces/: Boolean.hs  Goedel.hs  Lukasiewicz.hs  Product.hs  Real.hs  TwoMonBLat.hs
daniel_haskell/NeSySystem/Interpretations/: Countable.hs  Dice.hs  TrafficLight.hs  Weather.hs
daniel_haskell/NeSySystem/Signatures/: Countable.hs  Dice.hs  TrafficLight.hs  Weather.hs
daniel_haskell/NonLogical/Categories/: DATA.hs
daniel_haskell/NonLogical/Interpretations/: Countable.hs  Dice.hs  TrafficLight.hs  Weather.hs
daniel_haskell/NonLogical/Monads/: Dist.hs  Giry.hs
daniel_haskell/NonLogical/Signatures/: CountableSig.hs  DiceSig.hs  TrafficLightSig.hs  WeatherSig.hs
daniel_haskell_shallow/: Formulas.hs  Main.hs
daniel_haskell_shallow/A1_Syntax/: Formulas.hs
daniel_haskell_shallow/A1_Syntax/B1_Categorical/: CatVocab.hs
daniel_haskell_shallow/A1_Syntax/B2_Logical/: A2MonBLat.hs  TwoMonBLat.hs
daniel_haskell_shallow/A1_Syntax/B2_Typological/: DATA_Vocab.hs  FDATA_Vocab.hs  TENS_Vocab.hs
daniel_haskell_shallow/A1_Syntax/B3_Logical/: A2MonBLat.hs  TwoMonBLat.hs
daniel_haskell_shallow/A1_Syntax/B4_NonLogical/: Countable_Vocab.hs  Crossing_Vocab.hs  Dice_Vocab.hs  Weather_Vocab.hs
daniel_haskell_shallow/A2_Interpretation/B1_Categorical/Monads/: Dist.hs  Giry.hs
daniel_haskell_shallow/A2_Interpretation/B2_Logical/: Boolean.hs  Goedel.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs
daniel_haskell_shallow/A2_Interpretation/B2_Typological/Categories/: DATA.hs  FDATA.hs  TENS.hs
daniel_haskell_shallow/A2_Interpretation/B3_Logical/: Boolean.hs  Goedel.hs  LTNp.hs  Lukasiewicz.hs  Product.hs  Real.hs  SProd.hs
daniel_haskell_shallow/A2_Interpretation/B3_NonLogical/: Countable.hs  Crossing.hs  Dice.hs  Supremum.hs  Weather.hs
daniel_haskell_shallow/A2_Interpretation/B4_NonLogical/: Countable.hs  Crossing.hs  Dice.hs  Supremum.hs  Weather.hs
daniel_haskell_shallow/A3_Semantics/B3_NonLogical/Categories/: DATA.hs  TENS.hs
daniel_haskell_shallow/A3_Semantics/B3_NonLogical/Monads/: Dist.hs  Expectation.hs  Giry.hs
daniel_haskell_shallow/A3_Semantics/B4_NonLogical/Monads/: Expectation.hs
daniel_haskell_shallow/Logical/Interpretations/: Boolean.hs  Goedel.hs  Lukasiewicz.hs  Product.hs  Real.hs
daniel_haskell_shallow/Logical/Signatures/: A2MonBLat.hs
daniel_haskell_shallow/NonLogical/Categories/: DATA.hs  TENS.hs
daniel_haskell_shallow/NonLogical/Interpretations/: Countable.hs  Crossing.hs  Dice.hs  TrafficLight.hs  Weather.hs
daniel_haskell_shallow/NonLogical/Monads/: Expectation.hs  Giry.hs
daniel_haskell_shallow/NonLogical/Signatures/: CountableSig.hs  DiceSig.hs  TrafficLightSig.hs
examples/: custom_logics.py  dice.py  traffic_light.py  weather.py
muller/: __init__.py  hkt.py  nesy_framework.py  parser.py  transformation.py
muller/aggr2sgrpblat/: __init__.py  aggr2sgrpblat.py  boolean.py  priest.py
muller/logics/: __init__.py  aggr2sgrpblat.py  boolean.py  giry_product_algebra.py  priest.py  product_algebra.py
muller/monad/: __init__.py  base.py  distribution.py  giry.py  giry_np.py  giry_pymc.py  giry_sampling.py  identity.py  non_empty_powerset.py  powerset.py  util.py
src/muller/: nesy_framework.py
src/muller/aggr2sgrpblat/: aggr2sgrpblat.py
src/muller/monad/: distribution.py  identity.py  non_empty_powerset.py  util.py
test/: common.py  test_distribution.py  test_giry.py  test_giry_mc.py  test_giry_np.py  test_identity.py  test_nesy_framework.py  test_non_empty_powerset.py  test_parser.py  test_powerset.py  test_transformer.py  weather_prediction_DSPL.ipynb
