cabal-version: 2.4
name: mULLER
version: 0.1.0.0
synopsis: Neural-Symbolic Frameworks
description: Implementation of Neural-Symbolic frameworks in Haskell
license: MIT
author: User
maintainer: user@example.com

executable muller
  main-is: NeSy.hs
  other-modules: Integration
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    mtl,
    transformers,
    set-monad,
    probability,
    random,
    monad-bayes,
    vector,
    GaussQuadIntegration,
    numeric-tools,
    hasktorch
  default-language: Haskell2010 

executable daniel-haskell
  main-is: Main.hs
  hs-source-dirs: daniel_haskell
  other-modules: 
    NeSyFramework.Categories.DATA, 
    NeSyFramework.Categories.TENS, 
    NeSyFramework.Categories.Utils, 
    NeSyFramework.Monads.Dist, 
    NeSyFramework.Monads.Giry, 
    NeSyFramework.TruthSpaces.TwoMonBLat, 
    NeSyFramework.TruthSpaces.Boolean, 
    NeSyFramework.TruthSpaces.Lukasiewicz, 
    NeSyFramework.TruthSpaces.Goedel, 
    NeSyFramework.TruthSpaces.Product,
    NeSyFramework.TruthSpaces.Real,
    Syntax,
    Semantics,
    NeSySystem.Signatures.Dice,
    NeSySystem.Signatures.TrafficLight,
    NeSySystem.Signatures.Weather,
    NeSySystem.Signatures.Countable,
    NeSySystem.Interpretations.Dice,
    NeSySystem.Interpretations.TrafficLight,
    NeSySystem.Interpretations.Weather,
    NeSySystem.Interpretations.Countable
  build-depends:
    base >=4.16,
    containers,
    mtl,
    numeric-tools,
    hasktorch,
    statistics
  default-language: Haskell2010 

executable density-giry
  main-is: density_giry.hs
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    numeric-tools
  default-language: Haskell2010