cabal-version: 2.4
name: mULLER
version: 0.1.0.0
synopsis: Neural-Symbolic Frameworks
description: Implementation of Neural-Symbolic frameworks in Haskell
license: MIT
author: User
maintainer: user@example.com

executable muller
  main-is: NeSy.hs
  other-modules: Integration
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    mtl,
    transformers,
    set-monad,
    probability,
    random,
    monad-bayes,
    vector,
    GaussQuadIntegration,
    numeric-tools,
    hasktorch
  default-language: Haskell2010 

executable daniel-haskell
  main-is: Main.hs
  hs-source-dirs: daniel_haskell
  other-modules: 
    NonLogical.Categories.DATA, 
    NonLogical.Categories.TENS, 
    NonLogical.Monads.Dist, 
    NonLogical.Monads.Giry, 
    Logical.Signatures.TwoMonBLat, 
    NonLogical.Signatures.DiceSig,
    NonLogical.Signatures.WeatherSig,
    NonLogical.Signatures.TrafficLightSig,
    NonLogical.Signatures.CountableSig,
    Syntax,
    Semantics,
    TypedSyntax,
    TypedSemantics,
    TestTyped,
    NonLogical.Interpretations.Dice,
    NonLogical.Interpretations.Weather,
    NonLogical.Interpretations.TrafficLight,
    NonLogical.Interpretations.Countable,
    Logical.Interpretations.Real,
    Logical.Interpretations.Boolean,
    Logical.Interpretations.Product,
    Logical.Interpretations.Goedel,
    Logical.Interpretations.Lukasiewicz
  build-depends:
    base >=4.16,
    containers,
    mtl,
    numeric-tools,
    hasktorch,
    statistics
  default-language: Haskell2010 

executable density-giry
  main-is: density_giry.hs
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    numeric-tools
  default-language: Haskell2010