cabal-version: 2.4
name: mULLER
version: 0.1.0.0
synopsis: Neural-Symbolic Frameworks
description: Implementation of Neural-Symbolic frameworks in Haskell
license: MIT
author: User
maintainer: user@example.com

executable muller
  main-is: NeSy.hs
  other-modules: Integration
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    mtl,
    transformers,
    set-monad,
    probability,
    random,
    monad-bayes,
    vector,
    GaussQuadIntegration,
    numeric-tools,
    hasktorch
  default-language: Haskell2010 

executable daniel-haskell
  main-is: Main.hs
  hs-source-dirs: daniel_haskell
  other-modules: 
    NonLogical.Categories.DATA, 
    NonLogical.Categories.TENS, 
    NonLogical.Monads.Dist, 
    NonLogical.Monads.Giry, 
    Logical.Signatures.TwoMonBLat, 
    NonLogical.Signatures.DiceSig,
    NonLogical.Signatures.WeatherSig,
    NonLogical.Signatures.TrafficLightSig,
    NonLogical.Signatures.CountableSig,
    TypedSyntax,
    TypedSemantics,
    NonLogical.Interpretations.Dice,
    NonLogical.Interpretations.Weather,
    NonLogical.Interpretations.TrafficLight,
    NonLogical.Interpretations.Countable,
    Logical.Interpretations.Real,
    Logical.Interpretations.Boolean,
    Logical.Interpretations.Product,
    Logical.Interpretations.Goedel,
    Logical.Interpretations.Lukasiewicz
  build-depends:
    base >=4.16,
    containers,
    mtl,
    numeric-tools,
    hasktorch,
    statistics
  default-language: Haskell2010 

executable daniel-haskell-shallow
  main-is: Main.hs
  hs-source-dirs: daniel_haskell_shallow
  other-modules: 
    A3_Semantics.B3_NonLogical.Categories.DATA, 
    A3_Semantics.B3_NonLogical.Categories.TENS, 
    A3_Semantics.B3_NonLogical.Monads.Dist, 
    A3_Semantics.B3_NonLogical.Monads.Expectation,
    A3_Semantics.B3_NonLogical.Monads.Giry, 
    A2_Interpretation.B3_NonLogical.Supremum,
    A1_Syntax.Formulas,
    A1_Syntax.B2_Logical.TwoMonBLat, 
    A1_Syntax.B2_Logical.A2MonBLat,
    A2_Interpretation.B3_NonLogical.Dice,
    A2_Interpretation.B3_NonLogical.Weather,
    A2_Interpretation.B3_NonLogical.Crossing,
    A2_Interpretation.B3_NonLogical.Countable,
    A2_Interpretation.B2_Logical.Real,
    A2_Interpretation.B2_Logical.Boolean,
    A2_Interpretation.B2_Logical.Product,
    A2_Interpretation.B2_Logical.SProd,
    A2_Interpretation.B2_Logical.LTNp,
    A2_Interpretation.B2_Logical.Goedel,
    A2_Interpretation.B2_Logical.Lukasiewicz
  build-depends:
    base >=4.16,
    containers,
    mtl,
    numeric-tools,
    hasktorch,
    statistics
  default-language: Haskell2010 

executable density-giry
  main-is: density_giry.hs
  hs-source-dirs: Haskell
  build-depends:
    base >=4.16,
    containers,
    numeric-tools
  default-language: Haskell2010