[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2",
    "numpy>=2.3.2",
    "pymonad>=2.4.0",
    "scipy>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["muller*"]

