[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2",
    "numpy>=2.3.2",
    "pymc>=5.25.1",
    "pymonad>=2.4.0",
    "scipy>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["muller*"]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "matplotlib>=3.10.5",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [

]

[tool.coverage.run]
source = ["muller"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

